# pinescripts

./: .gitignore  .mcp.json  20pointsdown  20pointsup.pine  CLAUDE.md  apex_tail.pine  apex_tail_strategy.pine  band_reclaim_fade.pine  bip_watch_and_go.pine  body_impulse_pullback.pine  body_impulse_pullback_v2.pine  body_impulse_rider.md  body_impulse_sinewave.pine  body_impulse_strategy.pine  body_impulse_watch.pine  chop_detector.pine  fractal_drought_strategy.pine  fractal_flip_strategy.pine  fractals.pine  live_trend.pine  mean_reversion.pine  mean_reversion_strategy.pine  momentum_strategy.pine  nq_regime.pine  ohlc_mcp_server.py  pivot_reclaim.pine  pyproject.toml  range_detector.pine  regime_change.pine  requirements.txt  rolling_window_graph.pine  slope_curve.pine  slope_strategy.fukuoka.snapshot.pine  slope_strategy.geneva.snapshot.pine  slope_strategy.pine  slope_strategy.pre-breachfade.snapshot.pine  slope_strategy_15m.pine  slope_strategy_exits.md  slope_strategy_v2.pine  stagnation.pine  (+10 more)
backtest/: .gitignore  README.md  apex_tail_strat_test.py  backtest.py  breachfade_5yr.py  breachfade_sl_5yr.py  cluster_breakdown_5yr.py  cluster_mirror_short.py  deep_block_test.py  fukuoka_5yr_results.txt  intraday_momentum.py  reclaim_additivity.py  refine.py  run_breachfade.py  slope_angle_entry.py  slope_band_reclaim.py  slope_bigloss_block.py  slope_breakeven.py  slope_cut_loser_hours.py  slope_delay_entry.py  slope_dual_trend.py  slope_equity_5yr.csv  slope_exit_breakdown.py  slope_extreme_sl.py  slope_fakewin_audit.py  slope_no_thrd.py  slope_recent_decay.py  sweep.py  (+43 more)
(+8 files in other folders)
